# Midi-Hero

./: .gitignore  CMakeLists.txt  LICENSE  Midi Hero.jucer  readme.md
.github/workflows/: build_and_test.yml
CMake/: EmbedCsv.cmake  Tests.cmake
Catch2LibraryCode/: ApprovalTests.v.10.13.0.hpp
Catch2LibraryCode/catch2/: catch.hpp
Source/: DivisionLevelComponent.h  Global.h  HeroPage.cpp  HeroPage.h  JudgementLabel.cpp  JudgementLabel.h  LogTableComponent.cpp  LogTableComponent.h  LogTablePage.cpp  LogTablePage.h  MidiHeroSettings.h  MidiListModel.cpp  MidiListModel.h  MidiQueue.h  MidiTable.h  MidiUtils.h  Observer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessor.plumbing.cpp  RealtimeJudgementComponent.cpp  RealtimeJudgementComponent.h  ScoreCountsComponent.h  StatisticsComponent.cpp  StatisticsComponent.h  StatisticsPage.cpp  StatisticsPage.h  TabsComponent.cpp  TabsComponent.h  TimedMidiMessage.cpp  TimedMidiMessage.h  TotalScoreComponent.h
Source/GUI/: DivisionLevelComponent.h  HeroPage.cpp  HeroPage.h  JudgementLabel.h  ScoreCountsComponent.h  SettingsPage.cpp  SettingsPage.h  StatisticsPage.cpp  StatisticsPage.h  TabsComponent.cpp  TabsComponent.h  TotalScoreComponent.h
Source/Model/: Accuracy.cpp  Accuracy.h  MidiListModel.cpp  MidiListModel.h  MidiQueue.h  Scoring.cpp  Scoring.h  Statistics.cpp  Statistics.h  TimedMidiMessage.cpp  TimedMidiMessage.h
Source/Plugin/: Global.h  MidiHeroSettings.h  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.plumbing.cpp
Tests/: CMakeLists.txt  CalculationSettingsTests.cpp  GatheringNotesTests.cpp  MessageStatisticsTests.aps  MessageStatisticsTests.cpp  MessageStatisticsTests.rc  Off.csv  ScoreArithmetics.cpp  TestData.h  TestUtils.cpp  TestUtils.h  main.cpp  resource.h
Tests/Midi Hero_Tests/: Midi Hero_Tests.aps  Midi Hero_Tests.cpp  Midi Hero_Tests.rc  Midi Hero_Tests.sln  Midi Hero_Tests.vcxproj  Midi Hero_Tests.vcxproj.filters  TestData.csv  TestData.h  TestUtils.h  main.cpp  resource.h
Tests/Midi Hero_Tests/approvals/: Midi_Hero_Tests.Note_calculations_for_off_play.approved.txt  Midi_Hero_Tests.Note_calculations_for_quantized_play.approved.txt
Tests/approvals/: MessageStatisticsTests.Off_scoring.reports.approved.txt  MessageStatisticsTests.Off_scoring.reports.received.txt  MessageStatisticsTests.Quantized_scoring.reports.approved.txt  MessageStatisticsTests.Quantized_scoring.reports.received.txt
